<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/back"
    android:fitsSystemWindows="true"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/welcome_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/onboard_welcome"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/title"
        android:textSize="70sp"
        android:gravity="center"
        android:textColor="@color/black"
        android:elevation="10dp"
        />


    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:elevation="10dp"
        android:fontFamily="@font/title"
        android:gravity="center"
        android:text="@string/greeting"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/welcome_title" />

    <TextView
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcome_title"
            android:id="@+id/first_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/first_name_text"
            android:layout_marginVertical="200dp"
            android:layout_marginStart="40dp"
            android:textColor="@color/black"
            android:elevation="10dp"
            />

        <EditText
            app:layout_constraintStart_toEndOf="@id/first_name_text"
            app:layout_constraintTop_toTopOf="@id/first_name_text"
            app:layout_constraintBottom_toBottomOf="@id/first_name_text"
            android:id="@+id/first_name_edittext"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:autofillHints="First name"
            android:hint="@string/first_name_hint"
            android:alpha="0.5"
            android:ems="10"
            android:layout_marginStart="5dp"
            android:textColorHint="@color/black"
            android:elevation="10dp"
            android:gravity="center_vertical"
            />

        <TextView
            app:layout_constraintTop_toBottomOf="@id/first_name_text"
            app:layout_constraintStart_toStartOf="@id/first_name_text"
            android:id="@+id/last_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/last_name_text"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:elevation="10dp"
            />

        <EditText
            app:layout_constraintStart_toEndOf="@id/last_name_text"
            app:layout_constraintTop_toTopOf="@id/last_name_text"
            app:layout_constraintBottom_toBottomOf="@id/last_name_text"
            android:id="@+id/last_name_edittext"
            android:inputType="text"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            android:autofillHints="Last name"
            android:hint="@string/last_name_hint"
            android:alpha="0.5"
            android:gravity="center_vertical"
            android:ems="10"
            android:layout_marginStart="5dp"
            android:textColorHint="@color/black"
            android:elevation="10dp"
            />




        <TextView
            app:layout_constraintTop_toBottomOf="@id/last_name_text"
            app:layout_constraintStart_toStartOf="@id/last_name_text"
            android:id="@+id/email_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/email_text"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:elevation="10dp"
            />

        <EditText
            android:id="@+id/email_edittext"
            android:inputType="textEmailAddress"
            android:layout_width="wrap_content"
            android:textSize="12sp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="@id/email_text"
            app:layout_constraintBottom_toBottomOf="@id/email_text"
            app:layout_constraintStart_toEndOf="@id/first_name_text"
            android:autofillHints="First name"
            android:hint="@string/email_hint"
            android:alpha="0.5"
            android:gravity="center_vertical"
            android:ems="10"
            android:layout_marginStart="5dp"
            android:textColorHint="@color/black"
            android:elevation="10dp"
            />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submit_button"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@color/purple"
        android:text="@string/user_creation_submit"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/reg_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:cornerRadius="45dp"
        android:elevation="10dp"/>


    <com.facebook.login.widget.LoginButton
        app:layout_constraintStart_toStartOf="@id/submit_button"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/reg_facebook"
        android:layout_width="220dp"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="100dp"
        android:elevation="10dp"
        android:scaleY="1.5"/>





</androidx.constraintlayout.widget.ConstraintLayout>